Update APIs / Patterns for Java 17 (#669)
* Update APIs / Patterns for Java 17

* Fix Sonar warnings

* Fix deleted comment