@@ -23,7 +23,7 @@ public class MeasureValidationUtils {
     }
 
     protected static void validateGroupScore(MeasureReport.MeasureReportGroupComponent group, BigDecimal score) {
-        assertTrue(group.hasMeasureScore(), String.format("group \"%s\" does not have a score", group.getId()));
+        assertTrue(group.hasMeasureScore(), "group \"%s\" does not have a score".formatted(group.getId()));
         assertEquals(score, group.getMeasureScore().getValue());
     }
 
@@ -35,8 +35,7 @@ public class MeasureValidationUtils {
                         && x.getCode().getCoding().get(0).getCode().equals(populationName))
                 .findFirst();
 
-        assertTrue(
-                population.isPresent(), String.format("Unable to locate a population with id \"%s\"", populationName));
+        assertTrue(population.isPresent(), "Unable to locate a population with id \"%s\"".formatted(populationName));
 
         validatePopulation(population.get(), count);
     }
@@ -46,7 +45,7 @@ public class MeasureValidationUtils {
         assertEquals(
                 count,
                 population.getCount(),
-                String.format("expected count for population \"%s\" did not match", population.getId()));
+                "expected count for population \"%s\" did not match".formatted(population.getId()));
     }
 
     protected static void validateStratifier(
@@ -59,9 +58,7 @@ public class MeasureValidationUtils {
                         && x.getValue().hasText()
                         && x.getValue().getText().equals(stratumValue))
                 .findFirst();
-        assertTrue(
-                stratumOpt.isPresent(),
-                String.format("Group does not have a stratum with value: \"%s\"", stratumValue));
+        assertTrue(stratumOpt.isPresent(), "Group does not have a stratum with value: \"%s\"".formatted(stratumValue));
 
         MeasureReport.StratifierGroupComponent stratum = stratumOpt.get();
         Optional<MeasureReport.StratifierGroupPopulationComponent> population = stratum.getPopulation().stream()
@@ -70,15 +67,13 @@ public class MeasureValidationUtils {
                         && x.getCode().getCoding().get(0).getCode().equals(populationName))
                 .findFirst();
 
-        assertTrue(
-                population.isPresent(), String.format("Unable to locate a population with id \"%s\"", populationName));
+        assertTrue(population.isPresent(), "Unable to locate a population with id \"%s\"".formatted(populationName));
 
         assertEquals(
                 population.get().getCount(),
                 count,
-                String.format(
-                        "expected count for stratum value \"%s\" population \"%s\" did not match",
-                        stratumValue, populationName));
+                "expected count for stratum value \"%s\" population \"%s\" did not match"
+                        .formatted(stratumValue, populationName));
     }
 
     protected static void validateStratumScore(
@@ -90,16 +85,14 @@ public class MeasureValidationUtils {
                         && x.getValue().hasText()
                         && x.getValue().getText().equals(stratumValue))
                 .findFirst();
-        assertTrue(
-                stratumOpt.isPresent(),
-                String.format("Group does not have a stratum with value: \"%s\"", stratumValue));
+        assertTrue(stratumOpt.isPresent(), "Group does not have a stratum with value: \"%s\"".formatted(stratumValue));
 
         MeasureReport.StratifierGroupComponent stratum = stratumOpt.get();
         validateStratumScore(stratum, score);
     }
 
     protected static void validateStratumScore(MeasureReport.StratifierGroupComponent stratum, BigDecimal score) {
-        assertTrue(stratum.hasMeasureScore(), String.format("stratum \"%s\" does not have a score", stratum.getId()));
+        assertTrue(stratum.hasMeasureScore(), "stratum \"%s\" does not have a score".formatted(stratum.getId()));
         assertEquals(score, stratum.getMeasureScore().getValue());
     }
 
